change paths for admin operations
